kubernetes/Cluster-Int-Temp/deployments/networking/portainer/service.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: portainer
    namespace: networking
spec:
    selector:
        app: portainer
    ports:
        - name: ENC[AES256_GCM,data:QfImQQ==,iv:+3lvrw60tM1JEkgX9UqLbmHiSogrmm/cjcdP8xTpUhQ=,tag:bACRQOwosII+wIhmwouKYg==,type:str]
          port: ENC[AES256_GCM,data:y5gyUg==,iv:5hP9YdMPrTafLPzvRF76h7hAoqjxM7pMWK5lnFKygz0=,tag:YZT1OkCFHxpu+BsQqn43cA==,type:int]
          targetPort: ENC[AES256_GCM,data:1/SwiA==,iv:bV8tHpwzbT/6YxLbfH0FC8l+WuUMC+qkwH74c8e3yHE=,tag:hpOtTbjWiDFkQcZe2M11Aw==,type:int]
          protocol: ENC[AES256_GCM,data:7xgB,iv:nWUzClvEnh+bUhQwuKi7ZhwNFLWEfc1IXDY3FsyC+Pc=,tag:Qr4rZi7MOXp9OyDVlXPp2w==,type:str]
        - name: ENC[AES256_GCM,data:vi+uI28=,iv:fNlEwwENjsoteofLNeRufKyZ4x2t68njacJ5zsRk0pY=,tag:k7GjrggqD56InasWn88RNw==,type:str]
          port: ENC[AES256_GCM,data:/D8gtQ==,iv:/Edpj89BAIYZ5nSyZr1brZbrj90TRfPwZkwrMqv+HA8=,tag:mUn7TzX3PiHG8y/NZGcHRw==,type:int]
          targetPort: ENC[AES256_GCM,data:HwfdEQ==,iv:blC+uICMI/5mP9vXGJ8wtTB8mJb9mGjdzG8nbIjEWEA=,tag:2EpjJqwhr9pfGEuh+K8gFg==,type:int]
          protocol: ENC[AES256_GCM,data:+6VI,iv:+rLblVUyjaxAuLWMoTd9xpDyqt8VjWyUipqQVnUscgQ=,tag:FFTKQMfrDYxCifwkyy/Vtg==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMTDFSZEtONC96K2Y0V3lJ
[...]
            yP3SdVMpQVDvwLcPWSDpH/Xevh8XdMcFx5PoOGg7NKhoPVGi6UUftg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-15T15:26:41Z"
    mac: ENC[AES256_GCM,data:YqUAg3gmHLLzhBH9hbL2Vl6A2MqU5zo5Omq+nknPJpFKkO+aZnmMlmEmxYVnXwaswSF1GYeJAv1g51E7KcjW3dljeplCxGv6UWtUW/2QX7xL/jg9OS5zecnuhPOUHSO4zfzK8GLFTQEqDYssMvduy0FBASEoubMVPX3RZjt3yWs=,iv:45+jfZn1tt8IsNjQHrUse7oSIFLmG6bJ7RLm8rc0ASs=,tag:z6FmEBcGxYroxchegklP1A==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks|dnsZones|email|commonName|dnsNames|config)$
    version: 3.8.1
