kubernetes/Cluster-Int-Temp/deployments/networking/portainer/ingress.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: portainer
    namespace: networking
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:GHqwfjVUVw8MWIWkSt4oHJ6MgLLE1DABTQ==,iv:4dWhe+KwM1PIYk50kDmh3eoleaWg9WBNjF+qdoOq3pk=,tag:ySo8gWsgKyojjoxgw6eV0Q==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:iiZY5d0q00SW,iv:/3Q+6D8GDTIy8AlrkjRAzKZz17UiaW24pAi+uFyUJ+I=,tag:364lrV3z+L+KMZVtcNLEBQ==,type:str]
              port: ENC[AES256_GCM,data:7uT2Lg==,iv:Bs2INFm1f6A4MBVC41WzYxiTPtYzsX9eZUZkUX5lN+4=,tag:E1EmOaCQwdWCTVFyhoOo6w==,type:int]
        - match: ENC[AES256_GCM,data:jtPzu6QNDv/FAIVzxqYaJx/SSvvbRdweYgbtL+k=,iv:udtWhNmZxuvbL8P/qkppmgGTcAXyGtsKHuOB+wrwwhA=,tag:kByaHj/hglgq4xEJU9hD0g==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:Vbs5ckLbPSq+,iv:rxNEy9zWUuq9pznG//yVhsxsD3w5OFVnFyKkYdLU5x0=,tag:1EamjN6EmSVttZ02SUQm/g==,type:str]
              port: ENC[AES256_GCM,data:2eDxPA==,iv:girYyHrshZ7I2aYiprbmnH71zXGNfdy8iu3oQg+NUe8=,tag:nGfLeBeQNF3bLruXpyz8SQ==,type:int]
    tls:
        secretName: ENC[AES256_GCM,data:T74MwOPW0rg85z4=,iv:oCs85KeMEMFKUHLOsR6ehyxp0Yd+n6Lx6oTJY1qN/6I=,tag:xknJEA3sFQqpy66C7EoDMg==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3bzQyb25IVy9IdEJRRG9s
[...]
            l2L5YFdJEhPPQw/8pKJ8JapZ4IZNoqaBG1XpLZlS1eYuNCX1PKVFMA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-15T15:27:02Z"
    mac: ENC[AES256_GCM,data:pPdobyeTYSfYzxQv8AZxd4hEpmJULxQYmw0RslxyjBy02JRJUHelg5efkH1HQBK7oGqlFSoF38dhswC5FWXTxt23Pahf4nVdwacV0Z2h5pnmE3jKhFNGJ4lpNXO6gDKU8nO4cG7r/jH0QvQj0nd4soUvy0iymcpjKXQ9UFaT7L8=,iv:iTc0WkpL78iYYjZt12gJT1NpZCcgsBXtAs5pPZ03gRI=,tag:8LqHtjwaymLGngndJ7k87Q==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks|dnsZones|email|commonName|dnsNames|config)$
    version: 3.8.1
